objects/Nebula__LogEntryTagRule__mdt.object
<CustomObject>
    <description>Used to configure rules for assigning additional tags to LogEntry__c records based on field values</description>
    <fields>
        <fullName>Nebula__ComparisonType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Comparison Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONTAINS</fullName>
                    <default>true</default>
                    <label>CONTAINS</label>
                </value>
                <value>
                    <fullName>EQUALS</fullName>
                </value>
                <value>
                    <fullName>MATCHES_REGEX</fullName>
                </value>
                <value>
                    <fullName>STARTS_WITH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ComparisonValue__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Comparison Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__IsEnabled__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__SObjectField__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Field</label>
        <metadataRelationshipControllingField>Nebula__LogEntryTagRule__mdt.Nebula__SObjectType__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Log Entry Tag Rules</relationshipLabel>
        <relationshipName>LogEntryTagRules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Nebula__SObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Logger SObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Log Entry Tag Rules</relationshipLabel>
        <relationshipName>LogEntryTagRules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Nebula__Tags__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>1 or more tags to assign - each tag should be listed on a separate line</description>
        <inlineHelpText>1 or more tags to assign - each tag should be listed on a separate line</inlineHelpText>
        <label>Tag(s) to Apply</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log Entry Tag Rule</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Nebula__IsEnabled__c</columns>
        <columns>Nebula__SObjectType__c</columns>
        <columns>Nebula__SObjectField__c</columns>
        <columns>Nebula__ComparisonType__c</columns>
        <columns>Nebula__ComparisonValue__c</columns>
        <columns>Nebula__Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllEnabled</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Nebula__IsEnabled__c</columns>
        <columns>Nebula__SObjectType__c</columns>
        <columns>Nebula__SObjectField__c</columns>
        <columns>Nebula__ComparisonType__c</columns>
        <columns>Nebula__ComparisonValue__c</columns>
        <columns>Nebula__Tags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__IsEnabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Enabled</label>
    </listViews>
    <pluralLabel>Logger Tag Rules</pluralLabel>
</CustomObject>